--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
   <body>
     <script type="text/javascript" src="scripts/main.js"></script>
     <header class="header">
-      <div class="logo header__logo"></div>
-      <nav class="nav header__nav">
+      <div class="header__top">
+      <a href="#" class="header__logo">
+        <img src="images/logo/Logo.svg" alt="logo picture">
+      </a>
+      <nav class="nav">
         <ul class="nav__list">
           <li class="nav__item">
             <a href="#" class="nav__link">Home</a>
@@ -30,17 +33,17 @@
             <a href="#" class="nav__link">Contact us</a>
           </li>
           <li class="nav__item nav__item-action">
-            <a href="#" class="nav__link-action">Hire us</a>
+            <a href="#" class="nav__link">Hire us</a>
           </li>
         </ul>
       </nav>
-    </header>
-    <main>
-      <section class="section section__info">
-        <div class="info">
-          <h1 class="info__heading">Strategic Agency</h1>
-          <p class="info__text">We believe in the power of bold ideas that<br>
-             can solve business challenges.
+      </div>
+      <div class="header__bottom">
+        <div class="header-info">
+          <h1 class="header-info__heading">Strategic Agency</h1>
+          <p class="header-info__text">
+            We believe in the power of bold ideas that
+            can solve business challenges.
           </p>
           <button class="button button__info">Learn more</button>
         </div>
@@ -54,7 +57,9 @@
           <h3 class="slider__heading">Intro</h3>
           <p class="slider__text">By the same illusion which lifts the horizon.</p>
         </div>
-      </section>
+      </div>
+    </header>
+    <main>
     </main>
   </body>
 </html>
