--- a/index.html
+++ b/index.html
@@ -6,37 +6,37 @@
     <title>Dia</title>
     <link rel="stylesheet" href="./styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,500,600,700&display=swap" rel="stylesheet">
   </head>
   <body>
     <script type="text/javascript" src="scripts/main.js"></script>
     <header class="header">
       <div class="header__top">
-      <a href="#" class="header__logo">
-        <img src="images/logo/Logo.svg" alt="logo picture">
-      </a>
-      <nav class="nav">
-        <ul class="nav__list">
-          <li class="nav__item">
-            <a href="#" class="nav__link">Home</a>
-          </li>
-          <li class="nav__item">
-            <a href="#" class="nav__link">About us</a>
-          </li>
-          <li class="nav__item">
-            <a href="#" class="nav__link">Services</a>
-          </li>
-          <li class="nav__item">
-            <a href="#" class="nav__link">Work</a>
-          </li>
-          <li class="nav__item">
-            <a href="#" class="nav__link">Contact us</a>
-          </li>
-          <li class="nav__item nav__item-action">
-            <a href="#" class="nav__link">Hire us</a>
-          </li>
-        </ul>
-      </nav>
+        <a href="#" class="header__logo">
+          <img src="images/logo/Logo.svg" alt="logo picture">
+        </a>
+        <nav class="nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#" class="nav__link">Home</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">About us</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Services</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Work</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Contact us</a>
+            </li>
+            <li class="nav__item nav__item-action">
+              <a href="#" class="nav__link">Hire us</a>
+            </li>
+          </ul>
+        </nav>
       </div>
       <div class="header__bottom">
         <div class="header-info">
@@ -108,8 +108,8 @@
         </div>
       </section>
       <section class="process">
-          <div class="process-info process__process-info">
-        <span class="process-info__title">Process</span>
+        <div class="process-info process__process-info">
+          <span class="process-info__title">Process</span>
           <h3 class="process-info__heading">Air is a full service creative agency</h3>
           <div class="process-info__text">
             <p>Deep analytics, strong strategy and bright creative
@@ -119,10 +119,10 @@
                three components are united.
             </p>
           </div>
-          </div>
-          <div class="process__cards">
-            <div class="card card_offset">
-            <h4 class="card__number card__number_1">001</h4>
+        </div>
+        <div class="process__cards">
+          <div class="card card_offset">
+            <h4 class="card__heading card__heading_1">001</h4>
             <ul class="card__text">
               <li>Brand Development</li>
               <li>Copywriting</li>
@@ -130,14 +130,14 @@
               <li>Packaging</li>
             </ul>
             <div class="card__learn-button">
-            <button class="card__button card__button_1">
-              <img src="images/process/card_arrow.svg" alt="#" class="card__arrow">
-            </button>
-            <a href="#" class="card__link">Learn more</a>
+              <button class="card__button card__button_1">
+                <img src="images/process/card_arrow.svg" alt="forward arrow" class="card__arrow">
+              </button>
+              <a href="#" class="card__link">Learn more</a>
             </div>
-            </div>
-            <div class="card">
-            <h4 class="card__number card__number_2">002</h4>
+          </div>
+          <div class="card">
+            <h4 class="card__heading card__heading_2">002</h4>
             <ul class="card__text">
               <li>Content Production</li>
               <li>Graphic Design</li>
@@ -145,14 +145,14 @@
               <li>Post Production</li>
             </ul>
             <div class="card__learn-button">
-            <button class="card__button card__button_2">
-              <img src="images/process/card_arrow.svg" alt="#" class="card__arrow">
-            </button>
-            <a href="#" class="card__link">Learn more</a>
+              <button class="card__button card__button_2">
+                <img src="images/process/card_arrow.svg" alt="forward arrow" class="card__arrow">
+              </button>
+              <a href="#" class="card__link">Learn more</a>
             </div>
-            </div>
-            <div class="card card_offset">
-            <h4 class="card__number card__number_3">003</h4>
+          </div>
+          <div class="card card_offset">
+            <h4 class="card__heading card__heading_3">003</h4>
             <ul class="card__text">
               <li>Marketing Strategy</li>
               <li>Email Marketing</li>
@@ -160,14 +160,14 @@
               <li>Blog Content & SEO</li>
             </ul>
             <div class="card__learn-button">
-            <button class="card__button card__button_3">
-              <img src="images/process/card_arrow.svg" alt="#" class="card__arrow">
-            </button>
-            <a href="#" class="card__link">Learn more</a>
+              <button class="card__button card__button_3">
+                <img src="images/process/card_arrow.svg" alt="forward arrow" class="card__arrow">
+              </button>
+              <a href="#" class="card__link">Learn more</a>
             </div>
-            </div>
-            <div class="card">
-            <h4 class="card__number card__number_4">004</h4>
+          </div>
+          <div class="card">
+            <h4 class="card__heading card__heading_4">004</h4>
             <ul class="card__text">
               <li>Digital communications</li>
               <li>Influencer Marketing</li>
@@ -175,12 +175,12 @@
               <li>Strategic Partnerships</li>
             </ul>
             <div class="card__learn-button">
-            <button class="card__button card__button_4">
-              <img src="images/process/card_arrow.svg" alt="#" class="card__arrow">
-            </button>
-            <a href="#" class="card__link">Learn more</a>
+              <button class="card__button card__button_4">
+                <img src="images/process/card_arrow.svg" alt="forward arrow" class="card__arrow">
+              </button>
+              <a href="#" class="card__link">Learn more</a>
             </div>
-            </div>
+          </div>
         </div>
       </section>
     </main>
