--- a/index.html
+++ b/index.html
@@ -112,11 +112,13 @@
           <span class="process-info__title">Process</span>
           <h3 class="process-info__heading">Air is a full service creative agency</h3>
           <div class="process-info__text">
-            <p>Deep analytics, strong strategy and bright creative
-               ideas.
+            <p>
+              Deep analytics, strong strategy and bright creative
+              ideas.
             </p>
-            <p>We are sure that first-rate job is possible only if all
-               three components are united.
+            <p>
+              We are sure that first-rate job is possible only if all
+              three components are united.
             </p>
           </div>
         </div>
@@ -131,7 +133,7 @@
             </ul>
             <div class="card__learn-button">
               <button class="card__button card__button_1">
-                <img src="images/process/card_arrow.svg" alt="forward arrow" class="card__arrow">
+                <img src="images/process/card_arrow.svg" alt="open link" class="card__arrow">
               </button>
               <a href="#" class="card__link">Learn more</a>
             </div>
@@ -146,7 +148,7 @@
             </ul>
             <div class="card__learn-button">
               <button class="card__button card__button_2">
-                <img src="images/process/card_arrow.svg" alt="forward arrow" class="card__arrow">
+                <img src="images/process/card_arrow.svg" alt="open link" class="card__arrow">
               </button>
               <a href="#" class="card__link">Learn more</a>
             </div>
@@ -161,7 +163,7 @@
             </ul>
             <div class="card__learn-button">
               <button class="card__button card__button_3">
-                <img src="images/process/card_arrow.svg" alt="forward arrow" class="card__arrow">
+                <img src="images/process/card_arrow.svg" alt="open link" class="card__arrow">
               </button>
               <a href="#" class="card__link">Learn more</a>
             </div>
@@ -176,7 +178,7 @@
             </ul>
             <div class="card__learn-button">
               <button class="card__button card__button_4">
-                <img src="images/process/card_arrow.svg" alt="forward arrow" class="card__arrow">
+                <img src="images/process/card_arrow.svg" alt="open link" class="card__arrow">
               </button>
               <a href="#" class="card__link">Learn more</a>
             </div>
