--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dia</title>
+    <link rel="icon" type="image/ico" href="images/title-icon/letter-D.ico">
     <link rel="stylesheet" href="./styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,500,600,700&display=swap" rel="stylesheet">
@@ -78,7 +79,10 @@
           <h2 class="expertise__heading">Our expertise</h2>
           <div class="expertise__list">
             <div class="direction">
-            <img src="images/what-we-do/branding.png" alt="branding image" class="direction__picture">
+            <img src="images/what-we-do/branding.png"
+                 alt="branding image"
+                 class="direction__picture"
+            >
             <h3 class="direction__heading">Branding</h3>
             <p class="direction__text">
               We create additional value for companies,
@@ -87,7 +91,10 @@
             </p>
             </div>
             <div class="direction">
-            <img src="images/what-we-do/communication.png" alt="communication image" class="direction__picture">
+            <img src="images/what-we-do/communication.png"
+                 alt="communication image"
+                 class="direction__picture"
+            >
             <h3 class="direction__heading">Communication</h3>
             <p class="direction__text">
               We strive to create communications that can
@@ -96,7 +103,10 @@
             </p>
             </div>
             <div class="direction">
-            <img src="images/what-we-do/strategy.png" alt="strategy image" class="direction__picture">
+            <img src="images/what-we-do/strategy.png"
+                 alt="strategy image"
+                 class="direction__picture"
+            >
             <h3 class="direction__heading">Strategy</h3>
             <p class="direction__text">
               We create business growth strategies,
@@ -133,7 +143,10 @@
             </ul>
             <div class="card__learn-button">
               <button class="card__button card__button_1">
-                <img src="images/process/card_arrow.svg" alt="open link" class="card__arrow">
+                <img src="images/process/card_arrow.svg"
+                     alt="open link"
+                     class="card__arrow"
+                >
               </button>
               <a href="#" class="card__link">Learn more</a>
             </div>
@@ -148,7 +161,10 @@
             </ul>
             <div class="card__learn-button">
               <button class="card__button card__button_2">
-                <img src="images/process/card_arrow.svg" alt="open link" class="card__arrow">
+                <img src="images/process/card_arrow.svg"
+                     alt="open link"
+                     class="card__arrow"
+                >
               </button>
               <a href="#" class="card__link">Learn more</a>
             </div>
@@ -163,7 +179,10 @@
             </ul>
             <div class="card__learn-button">
               <button class="card__button card__button_3">
-                <img src="images/process/card_arrow.svg" alt="open link" class="card__arrow">
+                <img src="images/process/card_arrow.svg"
+                     alt="open link"
+                     class="card__arrow"
+                >
               </button>
               <a href="#" class="card__link">Learn more</a>
             </div>
@@ -178,12 +197,132 @@
             </ul>
             <div class="card__learn-button">
               <button class="card__button card__button_4">
-                <img src="images/process/card_arrow.svg" alt="open link" class="card__arrow">
+                <img src="images/process/card_arrow.svg"
+                     alt="open link"
+                     class="card__arrow"
+                >
               </button>
               <a href="#" class="card__link">Learn more</a>
             </div>
           </div>
         </div>
+      </section>
+      <section class="features">
+        <div class="features-info features__features-info">
+          <span class="features-info__title">Approach</span>
+          <h3 class="features-info__heading">
+            We strive to create meaningful projects
+          </h3>
+          <div class="features-info__item">
+            <div class="features-info__icon-container">
+              <img src="images/features/announcement speaker.svg"
+                   alt="feature item icon"
+                   class="features-info__icon"
+              >
+            </div>
+            <p class="features-info__text">
+              We are sure that the brands built on
+              a strong strategy, big ideas and
+              simple human values always win.
+              Only such brands change the game.
+            </p>
+          </div>
+          <div class="features-info__item">
+            <div class="features-info__icon-container">
+              <img src="images/features/calendar.svg"
+                   alt="feature item icon"
+                   class="features-info__icon"
+              >
+            </div>
+            <p class="features-info__text">
+              No one can realize the idea as its
+              creators. Therefore, we set up
+              agency-based photo and video
+              production departments.
+            </p>
+          </div>
+          <div class="features-info__item">
+            <div class="features-info__icon-container">
+              <img src="images/features/file-text.svg"
+                   alt="feature item icon"
+                   class="features-info__icon"
+              >
+            </div>
+            <p class="features-info__text">
+              We strive to create meaningful
+              projects that make brands valuable,
+              and the world around us more aesthetic.
+            </p>
+          </div>
+        </div>
+        <div class="features__image">
+        </div>
+      </section>
+      <section class="testimonials">
+        <span class="testimonials__title">Testimonials</span>
+        <h3 class="testimonials__heading">What people say</h3>
+        <div class="testimonials__person-container">
+          <div class="person person_first">
+            <img src="images/testimonials/testimonial-ava-1.png"
+                 alt="Tal Gilad"
+                 class="person__photo"
+            >
+            <p class="person__text person__text_first">
+              DIA’s ideas are refreshing and out
+              of the box. Authentic team that
+              focuses on the important path of
+              the brand.
+            </p>
+            <p class="person__name">Tal Gilad</p>
+            <span class="person__title">Teach for America</span>
+          </div>
+          <div class="person person_second">
+            <img src="images/testimonials/testimonial-ava-2.png"
+                 alt="Azadeh Hawkins"
+                 class="person__photo"
+            >
+            <p class="person__text person__text_second">
+              DIA is an exceptional agency that leads
+              with creative talent, first-class account
+              servicing.
+            </p>
+            <p class="person__name">Azadeh Hawkins</p>
+            <span class="person__title">Hawkins Consulting</span>
+          </div>
+          <div class="person person_third">
+            <img src="images/testimonials/testimonial-ava-3.png"
+                 alt="Michel Grover"
+                 class="person__photo"
+            >
+            <p class="person__text person__text_third">
+              DIA raises the agency bar
+              to stratospheric heights on both creative
+              output and client service.
+            </p>
+            <p class="person__name">Michel Grover</p>
+            <span class="person__title">Hulu</span>
+          </div>
+        </div>
+      </section>
+      <section class="vision">
+        <div class="vision__small-block"></div>
+        <div class="vision__small-block"></div>
+        <div class="vision__small-block"></div>
+        <div class="vision__small-block"></div>
+        <div class="vision__small-block"></div>
+        <div class="vision__medium-block"></div>
+        <div class="vision__medium-block"></div>
+        <div class="vision__medium-block"></div>
+        <div class="vision__medium-block"></div>
+        <div class="vision__large-block"></div>
+        <div class="vision__large-block"></div>
+        <div class="vision__large-block"></div>
+        <h3 class="vision__heading">Vision, Passion, Results</h3>
+        <p class="vision__text">
+          We are sure that first-rate job is possible only if all three
+          components are united.
+        </p>
+        <button class="vision__button button">Apply</button>
       </section>
     </main>
   </body>
