--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <script type="text/javascript" src="scripts/main.js"></script>
-    <header class="header">
+    <header class="header" id="home">
       <div class="header__top">
         <a href="#" class="header__logo">
           <img src="images/logo/Logo.svg" alt="logo picture">
@@ -19,19 +19,19 @@
         <nav class="nav">
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="#" class="nav__link">Home</a>
+              <a href="#home" class="nav__link">Home</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">About us</a>
+              <a href="#about" class="nav__link">About us</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">Services</a>
+              <a href="#services" class="nav__link">Services</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">Work</a>
+              <a href="#work" class="nav__link">Work</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">Contact us</a>
+              <a href="#contact" class="nav__link">Contact us</a>
             </li>
             <li class="nav__item nav__item-action">
               <a href="#" class="nav__link">Hire us</a>
@@ -50,10 +50,18 @@
         </div>
         <div class="slider">
           <button class="slider__button">
-            <img src="images/slider/arrow_left.svg" alt="left arrow" class="slider__arrow">
+            <img
+              src="images/slider/arrow_left.svg"
+              alt="left arrow"
+              class="slider__arrow"
+            >
           </button>
           <button class="slider__button slider__button-right">
-            <img src="images/slider/arrow_right.svg" alt="right arrow" class="slider__arrow">
+            <img
+              src="images/slider/arrow_right.svg"
+              alt="right arrow"
+              class="slider__arrow"
+            >
           </button>
           <h3 class="slider__heading">Intro</h3>
           <p class="slider__text">By the same illusion which lifts the horizon.</p>
@@ -61,7 +69,7 @@
       </div>
     </header>
     <main>
-      <section class="about">
+      <section class="about" id="about">
         <h2 class="about__heading">
           Who we are
         </h2>
@@ -79,9 +87,10 @@
           <h2 class="expertise__heading">Our expertise</h2>
           <div class="expertise__list">
             <div class="direction">
-            <img src="images/what-we-do/branding.png"
-                 alt="branding image"
-                 class="direction__picture"
+            <img
+              src="images/what-we-do/branding.png"
+              alt="branding image"
+              class="direction__picture"
             >
             <h3 class="direction__heading">Branding</h3>
             <p class="direction__text">
@@ -91,9 +100,10 @@
             </p>
             </div>
             <div class="direction">
-            <img src="images/what-we-do/communication.png"
-                 alt="communication image"
-                 class="direction__picture"
+            <img
+              src="images/what-we-do/communication.png"
+              alt="communication image"
+              class="direction__picture"
             >
             <h3 class="direction__heading">Communication</h3>
             <p class="direction__text">
@@ -103,9 +113,10 @@
             </p>
             </div>
             <div class="direction">
-            <img src="images/what-we-do/strategy.png"
-                 alt="strategy image"
-                 class="direction__picture"
+            <img
+              src="images/what-we-do/strategy.png"
+              alt="strategy image"
+              class="direction__picture"
             >
             <h3 class="direction__heading">Strategy</h3>
             <p class="direction__text">
@@ -117,7 +128,7 @@
           </div>
         </div>
       </section>
-      <section class="process">
+      <section class="process" id="services">
         <div class="process-info process__process-info">
           <span class="process-info__title">Process</span>
           <h3 class="process-info__heading">Air is a full service creative agency</h3>
@@ -143,9 +154,10 @@
             </ul>
             <div class="card__learn-button">
               <button class="card__button card__button_1">
-                <img src="images/process/card_arrow.svg"
-                     alt="open link"
-                     class="card__arrow"
+                <img
+                  src="images/process/card_arrow.svg"
+                  alt="open link"
+                  class="card__arrow"
                 >
               </button>
               <a href="#" class="card__link">Learn more</a>
@@ -161,9 +173,10 @@
             </ul>
             <div class="card__learn-button">
               <button class="card__button card__button_2">
-                <img src="images/process/card_arrow.svg"
-                     alt="open link"
-                     class="card__arrow"
+                <img
+                  src="images/process/card_arrow.svg"
+                  alt="open link"
+                  class="card__arrow"
                 >
               </button>
               <a href="#" class="card__link">Learn more</a>
@@ -179,9 +192,10 @@
             </ul>
             <div class="card__learn-button">
               <button class="card__button card__button_3">
-                <img src="images/process/card_arrow.svg"
-                     alt="open link"
-                     class="card__arrow"
+                <img
+                  src="images/process/card_arrow.svg"
+                  alt="open link"
+                  class="card__arrow"
                 >
               </button>
               <a href="#" class="card__link">Learn more</a>
@@ -197,9 +211,10 @@
             </ul>
             <div class="card__learn-button">
               <button class="card__button card__button_4">
-                <img src="images/process/card_arrow.svg"
-                     alt="open link"
-                     class="card__arrow"
+                <img
+                  src="images/process/card_arrow.svg"
+                  alt="open link"
+                  class="card__arrow"
                 >
               </button>
               <a href="#" class="card__link">Learn more</a>
@@ -207,7 +222,7 @@
           </div>
         </div>
       </section>
-      <section class="features">
+      <section class="features" id="work">
         <div class="features-info features__features-info">
           <span class="features-info__title">Approach</span>
           <h3 class="features-info__heading">
@@ -215,9 +230,10 @@
           </h3>
           <div class="features-info__item">
             <div class="features-info__icon-container">
-              <img src="images/features/announcement speaker.svg"
-                   alt="feature item icon"
-                   class="features-info__icon"
+              <img
+                src="images/features/announcement speaker.svg"
+                alt="feature item icon"
+                class="features-info__icon"
               >
             </div>
             <p class="features-info__text">
@@ -229,9 +245,10 @@
           </div>
           <div class="features-info__item">
             <div class="features-info__icon-container">
-              <img src="images/features/calendar.svg"
-                   alt="feature item icon"
-                   class="features-info__icon"
+              <img
+                src="images/features/calendar.svg"
+                alt="feature item icon"
+                class="features-info__icon"
               >
             </div>
             <p class="features-info__text">
@@ -243,9 +260,10 @@
           </div>
           <div class="features-info__item">
             <div class="features-info__icon-container">
-              <img src="images/features/file-text.svg"
-                   alt="feature item icon"
-                   class="features-info__icon"
+              <img
+                src="images/features/file-text.svg"
+                alt="feature item icon"
+                class="features-info__icon"
               >
             </div>
             <p class="features-info__text">
@@ -263,9 +281,10 @@
         <h3 class="testimonials__heading">What people say</h3>
         <div class="testimonials__person-container">
           <div class="person person_first">
-            <img src="images/testimonials/testimonial-ava-1.png"
-                 alt="Tal Gilad"
-                 class="person__photo"
+            <img
+              src="images/testimonials/testimonial-ava-1.png"
+              alt="Tal Gilad"
+              class="person__photo"
             >
             <p class="person__text person__text_first">
               DIA’s ideas are refreshing and out
@@ -277,9 +296,10 @@
             <span class="person__title">Teach for America</span>
           </div>
           <div class="person person_second">
-            <img src="images/testimonials/testimonial-ava-2.png"
-                 alt="Azadeh Hawkins"
-                 class="person__photo"
+            <img
+              src="images/testimonials/testimonial-ava-2.png"
+              alt="Azadeh Hawkins"
+              class="person__photo"
             >
             <p class="person__text person__text_second">
               DIA is an exceptional agency that leads
@@ -290,9 +310,10 @@
             <span class="person__title">Hawkins Consulting</span>
           </div>
           <div class="person person_third">
-            <img src="images/testimonials/testimonial-ava-3.png"
-                 alt="Michel Grover"
-                 class="person__photo"
+            <img
+              src="images/testimonials/testimonial-ava-3.png"
+              alt="Michel Grover"
+              class="person__photo"
             >
             <p class="person__text person__text_third">
               DIA raises the agency bar
@@ -319,11 +340,85 @@
         <div class="vision__large-block"></div>
         <h3 class="vision__heading">Vision, Passion, Results</h3>
         <p class="vision__text">
-          We are sure that first-rate job is possible only if all three
-          components are united.
+            We are sure that first-rate job is possible only if all three
+            components are united.
         </p>
-        <button class="vision__button button">Apply</button>
+        <div class="vision__button-wrapper">
+          <button class="vision__button button">Apply</button>
+        </div>
       </section>
     </main>
+    <footer class="footer" id="contact">
+      <div class="footer__top">
+        <div class="footer__message message">
+          <h4 class="message__heading">Send us  a message</h4>
+          <input
+            type="email"
+            class="message__email"
+            placeholder="Your email"
+          >
+          <input
+            type="text"
+            class="message__name"
+            placeholder="Your name"
+          >
+          <textarea
+            type="text"
+            name="message"
+            rows="1"
+            class="message__message"
+            placeholder="Your message"
+          ></textarea>
+          <button class="message__button button">Send</button>
+        </div>
+        <div class="footer__contact contact">
+          <h4 class="contact__heading">Contact us</h4>
+          <span class="contact__phone-title">Call us</span>
+          <p class="contact__phone-value">654 321 987</p>
+          <span class="contact__address-title">Visit us</span>
+          <p class="contact__address-value">
+            2905 West Drive, Buffalo Grove
+          </p>
+          <div class="contact__media">
+            <span class="contact__media-title">Our socials</span>
+            <div class="contact__media-icon">
+              <svg width="15" height="25" viewBox="0 0 15 25" fill="none" xmlns="http://www.w3.org/2000/svg" class="contact__media-facebook">
+                <path d="M14.6667 1.66674C14.6667 1.48993 14.5964 1.32036 14.4714 1.19533C14.3464 1.07031 14.1768 1.00007 14 1.00007H10.6667C8.98816 0.916459 7.3448 1.50059 6.09563 2.62484C4.84646 3.7491 4.09305 5.32207 4 7.00007V10.6001H0.666667C0.489856 10.6001 0.320287 10.6703 0.195262 10.7953C0.070238 10.9204 0 11.0899 0 11.2667V14.7334C0 14.9102 0.070238 15.0798 0.195262 15.2048C0.320287 15.3298 0.489856 15.4001 0.666667 15.4001H4V24.3334C4 24.5102 4.07024 24.6798 4.19526 24.8048C4.32029 24.9298 4.48986 25.0001 4.66667 25.0001H8.66667C8.84348 25.0001 9.01305 24.9298 9.13807 24.8048C9.2631 24.6798 9.33333 24.5102 9.33333 24.3334V15.4001H12.8267C12.9749 15.4022 13.1197 15.3548 13.238 15.2655C13.3563 15.1762 13.4415 15.0499 13.48 14.9067L14.44 11.4401C14.4665 11.3416 14.4701 11.2383 14.4504 11.1382C14.4308 11.0381 14.3884 10.9438 14.3265 10.8627C14.2647 10.7816 14.1851 10.7157 14.0938 10.6701C14.0025 10.6246 13.902 10.6006 13.8 10.6001H9.33333V7.00007C9.3665 6.67004 9.52149 6.36422 9.76803 6.14233C10.0146 5.92044 10.335 5.79841 10.6667 5.80007H14C14.1768 5.80007 14.3464 5.72983 14.4714 5.60481C14.5964 5.47978 14.6667 5.31021 14.6667 5.1334V1.66674Z" fill="white"/>
+              </svg>
+              <svg width="25" height="22" viewBox="0 0 25 22" fill="none" xmlns="http://www.w3.org/2000/svg" class="contact__media-twitter">
+                  <path d="M6.77241 21.6671C8.744 21.733 10.7088 21.4031 12.5507 20.6968C14.3926 19.9905 16.0743 18.9221 17.4963 17.5548C18.9183 16.1875 20.0517 14.549 20.8297 12.7362C21.6077 10.9234 22.0144 8.97305 22.0257 7.00038C22.9293 5.88227 23.6002 4.59482 23.9991 3.21372C24.0289 3.1046 24.0264 2.9892 23.9922 2.88142C23.9579 2.77363 23.8931 2.67806 23.8058 2.6062C23.7184 2.53435 23.6122 2.48928 23.4998 2.47642C23.3874 2.46356 23.2737 2.48346 23.1724 2.53372C22.6997 2.76126 22.1675 2.83475 21.6509 2.74386C21.1342 2.65296 20.6591 2.40225 20.2924 2.02705C19.8243 1.51449 19.2582 1.10109 18.6274 0.811354C17.9966 0.521617 17.3141 0.361433 16.6203 0.340296C15.9265 0.319159 15.2356 0.437498 14.5883 0.6883C13.9411 0.939103 13.3508 1.31727 12.8524 1.80038C12.17 2.46126 11.6702 3.28744 11.4015 4.19862C11.1328 5.1098 11.1044 6.07499 11.3191 7.00038C6.85241 7.26705 3.78574 5.14705 1.33241 2.24038C1.25871 2.15692 1.1623 2.09672 1.05495 2.06714C0.947601 2.03757 0.833963 2.03989 0.727912 2.07382C0.621861 2.10776 0.527987 2.17184 0.457753 2.25825C0.38752 2.34465 0.343966 2.44964 0.332412 2.56038C-0.134962 5.15295 0.202184 7.82645 1.29857 10.2218C2.39495 12.6172 4.19807 14.6197 6.46574 15.9604C4.94526 17.7042 2.81002 18.7933 0.505745 19.0004C0.382295 19.0209 0.268334 19.0794 0.179814 19.1679C0.0912932 19.2563 0.0326428 19.3702 0.0120705 19.4937C-0.00850186 19.6171 0.0100338 19.7439 0.0650833 19.8563C0.120133 19.9686 0.208941 20.061 0.319079 20.1204C2.32377 21.1222 4.53139 21.6513 6.77241 21.6671Z" fill="white"/>
+              </svg>
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="contact__media-instagram">
+                <path d="M12.0027 5.8467C8.59743 5.8467 5.85075 8.594 5.85075 12C5.85075 15.406 8.59743 18.1533 12.0027 18.1533C15.4079 18.1533 18.1546 15.406 18.1546 12C18.1546 8.594 15.4079 5.8467 12.0027 5.8467ZM12.0027 16.0004C9.80212 16.0004 8.00312 14.2064 8.00312 12C8.00312 9.7936 9.79677 7.99955 12.0027 7.99955C14.2086 7.99955 16.0022 9.7936 16.0022 12C16.0022 14.2064 14.2032 16.0004 12.0027 16.0004ZM19.8412 5.595C19.8412 6.39295 19.1987 7.03024 18.4062 7.03024C17.6085 7.03024 16.9713 6.38759 16.9713 5.595C16.9713 4.80241 17.6138 4.15977 18.4062 4.15977C19.1987 4.15977 19.8412 4.80241 19.8412 5.595ZM23.9157 7.05166C23.8247 5.12909 23.3856 3.42608 21.9775 2.02298C20.5747 0.619882 18.8721 0.180743 16.9499 0.0843468C14.9689 -0.0281156 9.03112 -0.0281156 7.05008 0.0843468C5.1333 0.175388 3.43068 0.614526 2.02253 2.01763C0.614389 3.42073 0.180703 5.12373 0.0843279 7.0463C-0.0281093 9.02778 -0.0281093 14.9669 0.0843279 16.9483C0.175349 18.8709 0.614389 20.5739 2.02253 21.977C3.43068 23.3801 5.12794 23.8193 7.05008 23.9157C9.03112 24.0281 14.9689 24.0281 16.9499 23.9157C18.8721 23.8246 20.5747 23.3855 21.9775 21.977C23.3803 20.5739 23.8193 18.8709 23.9157 16.9483C24.0281 14.9669 24.0281 9.03314 23.9157 7.05166ZM21.3564 19.0744C20.9388 20.1241 20.1303 20.9327 19.0755 21.3558C17.496 21.9824 13.7481 21.8378 12.0027 21.8378C10.2572 21.8378 6.50396 21.977 4.92984 21.3558C3.88042 20.9381 3.07195 20.1294 2.64897 19.0744C2.02253 17.4946 2.16709 13.7458 2.16709 12C2.16709 10.2542 2.02789 6.50006 2.64897 4.92558C3.06659 3.87593 3.87507 3.06728 4.92984 2.6442C6.50931 2.01763 10.2572 2.16222 12.0027 2.16222C13.7481 2.16222 17.5014 2.02298 19.0755 2.6442C20.1249 3.06192 20.9334 3.87058 21.3564 4.92558C21.9828 6.50541 21.8383 10.2542 21.8383 12C21.8383 13.7458 21.9828 17.4999 21.3564 19.0744Z" fill="white"/>
+              </svg>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer__bottom">
+        <a href="#" class="footer__logo">
+          <img src="images/logo/Logo.svg" alt="logo picture">
+        </a>
+        <nav class="footer__nav">
+          <ul class="footer__nav-list">
+            <li class="footer__nav-item">
+              <a href="#home" class="footer__nav-link">Home</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#about" class="footer__nav-link">About us</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#services" class="footer__nav-link">Services</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#work" class="footer__nav-link">Work</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#contact" class="footer__nav-link">Contact us</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </footer>
   </body>
 </html>
