--- a/index.html
+++ b/index.html
@@ -152,15 +152,15 @@
               <li>Logo & Webite Design</li>
               <li>Packaging</li>
             </ul>
-            <div class="card__learn-button">
-              <button class="card__button card__button_1">
+            <div class="card__learn-button" tabindex="0">
+              <button class="card__button card__button_1" tabindex="-1">
                 <img
                   src="images/process/card_arrow.svg"
                   alt="open link"
                   class="card__arrow"
                 >
               </button>
-              <a href="#" class="card__link">Learn more</a>
+              <a href="#" class="card__link" tabindex="-1">Learn more</a>
             </div>
           </div>
           <div class="card">
@@ -171,15 +171,15 @@
               <li>Video Production</li>
               <li>Post Production</li>
             </ul>
-            <div class="card__learn-button">
-              <button class="card__button card__button_2">
+            <div class="card__learn-button" tabindex="0">
+              <button class="card__button card__button_2" tabindex="-1">
                 <img
                   src="images/process/card_arrow.svg"
                   alt="open link"
                   class="card__arrow"
                 >
               </button>
-              <a href="#" class="card__link">Learn more</a>
+              <a href="#" class="card__link" tabindex="-1">Learn more</a>
             </div>
           </div>
           <div class="card card_offset">
@@ -190,15 +190,15 @@
               <li>Paid Advertising</li>
               <li>Blog Content & SEO</li>
             </ul>
-            <div class="card__learn-button">
-              <button class="card__button card__button_3">
+            <div class="card__learn-button" tabindex="0">
+              <button class="card__button card__button_3" tabindex="-1">
                 <img
                   src="images/process/card_arrow.svg"
                   alt="open link"
                   class="card__arrow"
                 >
               </button>
-              <a href="#" class="card__link">Learn more</a>
+              <a href="#" class="card__link" tabindex="-1">Learn more</a>
             </div>
           </div>
           <div class="card">
@@ -209,15 +209,15 @@
               <li>Product Placements</li>
               <li>Strategic Partnerships</li>
             </ul>
-            <div class="card__learn-button">
-              <button class="card__button card__button_4">
+            <div class="card__learn-button" tabindex="0">
+              <button class="card__button card__button_4" tabindex="-1">
                 <img
                   src="images/process/card_arrow.svg"
                   alt="open link"
                   class="card__arrow"
                 >
               </button>
-              <a href="#" class="card__link">Learn more</a>
+              <a href="#" class="card__link" tabindex="-1">Learn more</a>
             </div>
           </div>
         </div>
