--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
             <li class="nav__item">
               <a href="#contact" class="nav__link">Contact us</a>
             </li>
-            <li class="nav__item nav__item-action">
-              <a href="#" class="nav__link">Hire us</a>
-            </li>
           </ul>
         </nav>
+        <div class="header__hire-item">
+          <a href="#" class="header__hire-link">Hire us</a>
+        </div>
       </div>
       <div class="header__bottom">
         <div class="header-info">
