--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
           <img src="images/logo/Logo.svg" alt="logo picture">
         </a>
         <nav class="nav">
+          <input type="checkbox" class="nav__toggler" id="nav-toggler">
+          <span class="nav__burger"></span>
+          <span class="nav__burger"></span>
+          <span class="nav__burger"></span>
           <ul class="nav__list">
             <li class="nav__item">
               <a href="#home" class="nav__link">Home</a>
