--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </ul>
         </nav>
         <div class="header__hire-item">
-          <a href="#" class="header__hire-link">Hire us</a>
+          <a href="#contact" class="header__hire-link">Hire us</a>
         </div>
       </div>
       <div class="header__bottom">
@@ -50,7 +50,8 @@
             We believe in the power of bold ideas that
             can solve business challenges.
           </p>
-          <button class="button button__info">Learn more</button>
+          <a class="button button__info" href="#about">
+            <button class="button button__info">Learn more</button></a>
         </div>
         <div class="slider">
           <button class="slider__button">
@@ -348,7 +349,7 @@
             components are united.
         </p>
         <div class="vision__button-wrapper">
-          <button class="vision__button button">Apply</button>
+          <a href="#contact"><button class="vision__button button">Apply</button></a>
         </div>
       </section>
     </main>
@@ -356,6 +357,7 @@
       <div class="footer__top">
         <div class="footer__message message">
           <h4 class="message__heading">Send us  a message</h4>
+          <form>
           <input
             type="email"
             class="message__email"
@@ -373,7 +375,8 @@
             class="message__message"
             placeholder="Your message"
           ></textarea>
-          <button class="message__button button">Send</button>
+          <button class="message__button button" type="reset">Send</button>
+        </form>
         </div>
         <div class="footer__contact contact">
           <h4 class="contact__heading">Contact us</h4>
