--- a/index.html
+++ b/index.html
@@ -357,16 +357,17 @@
       <div class="footer__top">
         <div class="footer__message message">
           <h4 class="message__heading">Send us  a message</h4>
-          <form>
           <input
-            type="email"
+            type="text"
             class="message__email"
             placeholder="Your email"
+            id="textfield1"
           >
           <input
             type="text"
             class="message__name"
             placeholder="Your name"
+            id="textfield2"
           >
           <textarea
             type="text"
@@ -374,9 +375,24 @@
             rows="1"
             class="message__message"
             placeholder="Your message"
+            id="textfield3"
           ></textarea>
-          <button class="message__button button" type="reset">Send</button>
-        </form>
+          <a href="#home">
+            <button
+              class="message__button button"
+              type="button"
+              onclick="clearFields()"
+            >Send
+            </button>
+          </a>
+          <script type="text/javascript">
+            function clearFields() {
+                document.getElementById("textfield1").value=""
+                document.getElementById("textfield2").value=""
+                document.getElementById("textfield3").value=""
+            }
+            </script>
+
         </div>
         <div class="footer__contact contact">
           <h4 class="contact__heading">Contact us</h4>
