--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,500,600,700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <script type="text/javascript" src="scripts/main.js"></script>
     <header class="header" id="home">
       <div class="header__top">
         <a href="#" class="header__logo">
@@ -54,11 +53,17 @@
             <button class="button button__info">Learn more</button></a>
         </div>
         <div class="slider">
-          <button class="slider__button">
+          <ul class="carousel">
+            <li class="carousel-item showing"></li>
+            <li class="carousel-item"></li>
+            <li class="carousel-item"></li>
+          </ul>
+          <button class="slider__button slider__button-left">
             <img
               src="images/slider/arrow_left.svg"
               alt="left arrow"
               class="slider__arrow"
+              id="previous"
             >
           </button>
           <button class="slider__button slider__button-right">
@@ -66,6 +71,7 @@
               src="images/slider/arrow_right.svg"
               alt="right arrow"
               class="slider__arrow"
+              id="next"
             >
           </button>
           <h3 class="slider__heading">Intro</h3>
@@ -443,5 +449,6 @@
         </nav>
       </div>
     </footer>
+    <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
